# tarfile

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: simple.cpp
src/: Header.cpp  Header.h  TarFile.cpp  TarFile.h  TarFile.hpp  memcpy.hpp
tests/: CMakeLists.txt  TestHeader.cpp  hello.tar  hello.tar.h
